Merged PR 58: fl-56: Create pipelines to deploy UI/Backend services